Adjust font-size on mobile nav-bar for better compatibility with mobile devices

--- a/conversions/templates/conversions/conversion_detail.html
+++ b/conversions/templates/conversions/conversion_detail.html
@@ -119,11 +119,11 @@
                             <div class="col p-5 border-top-thin">
                                 <div class="mr-3">
                                     <h3 class="text-white">Dimensions / Weight</h3>
-                                    <p class="mt-5 text-white large-font">Vehicle (L,W,H) - {{ conversion.vehicle_length }}m {{ conversion.vehicle_width }}m {{ conversion.vehicle_height }}m</p>
+                                    <p class="mt-5 text-white">Vehicle (L,W,H) - {{ conversion.vehicle_length }}m {{ conversion.vehicle_width }}m {{ conversion.vehicle_height }}m</p>
                                     {% if conversion.unladen_weight_verified %}
-                                    <p class="text-white large-font">Unladed Weight - {{ conversion.unladen_weight }}</p>
+                                    <p class="text-white">Unladed Weight - {{ conversion.unladen_weight }}</p>
                                 {% endif %}
-                                <p class="text-white large-font">Max Weight - {{ conversion.max_weight }}</p>
+                                <p class="text-white">Max Weight - {{ conversion.max_weight }}</p>
                                 </div>
                                 
                             </div>
