--- a/static/css/base.css
+++ b/static/css/base.css
@@ -382,9 +382,17 @@ a {
 }
 
 @media(min-width:1200px){
-li.nav-item{
-    font-size: 1.2rem;
+    li.nav-item{
+        font-size: 1.2rem;
+    }
 }
+
+@media(max-width:375px){
+    a#user-options,
+    a#mobile-search,
+    a#mobile-bag {
+        font-size: 0.8rem;
+    }
 }
 
 /* Footer */
