--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -6,8 +6,9 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block inner_content %}
-
-<h2 class="logo-font text-white mt-5 mb-4">{% trans "Sign In" %}</h2>
+<div class="mt-5">
+    <h2 class="logo-font text-white mt-5 mb-4">{% trans "Sign In" %}</h2>
+</div>
 <hr>
 
 {% get_providers as socialaccount_providers %}
@@ -40,8 +41,8 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Home</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+  <a class="btn btn-outline-black rounded-2" href="{% url 'home' %}">Home</a>
+  <button class="primaryAction btn-light-green rounded-2" type="submit">{% trans "Sign In" %}</button>
   <p class="mt-2">
     <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   </p>
