Update profile link in mobile nav bar

--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -33,7 +33,7 @@
                 <a href="{% url 'approve_conversions' %}" class="dropdown-item">Product Management</a>
                 <a href="{% url 'manage_conversions' %}" class="dropdown-item">Conversion Listing Management</a>
             {% endif %}
-            <a href="#" class="dropdown-item">My Profile</a>
+            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
             <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
         {% else %}
             <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
