Fix media files without {{ MEDIA }} prefixes

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -20,7 +20,7 @@
         </div>
         <div class="row mt-3">
             <div class="col-12 col-xl-5 order-xl-last">
-                <img class="img-fluid" src="/media/about-us-3.png" alt="">
+                <img class="img-fluid" src="{{ MEDIA_URL }}about-us-3.png" alt="">
             </div>
             <div class="col-12 col-xl-7">
                 <div class="bg-cream br-1 d-flex align-items-center">
@@ -32,7 +32,7 @@
         </div>
         <div class="row mt-5">
             <div class="col-12 col-xl-5">
-                <img class="img-fluid" src="/media/about-us-2.png" alt="">
+                <img class="img-fluid" src="{{ MEDIA_URL }}about-us-2.png" alt="">
             </div>
             <div class="col-12 col-xl-7">
                 <div class="bg-cream br-1 d-flex align-items-center">
