--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,7 +17,7 @@
     <div id="site-entry-content" class="row h-100 text-center">
         <div class="col">
             <div id="entry-overlay-content">
-                <img id="entry-overlay-logo" class="center-block mb-5" src="/media/wild_mile_logo_square.png" alt="wild mile logo">
+                <img id="entry-overlay-logo" class="center-block mb-5" src="{{ MEDIA_URL }}wild-mile-logo-square.png" alt="wild mile logo">
                 <h3 class="text-white">A platform to buy and sell unique converted vehicles</h3>
                 <h5 class="text-center text-white mt-5">Click / Tap anywhere to enter</h5>
             </div>
