Change page styling on saved listings, my listings and messageportal pages

--- a/profiles/templates/profiles/message_portal.html
+++ b/profiles/templates/profiles/message_portal.html
@@ -26,10 +26,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col mt-4 mb-4 d-flex flex-column align-items-center">
+            <div class="col mt-4 mb-5 d-flex flex-column align-items-center">
                 <h2 class="text-white text-center mt-3">This feature is coming soon!</h2>
                 <h5 class="text-white text-center mb-4">A platform to communicate with sellers.</h5>
-                <img class="" id="coming-soon-image" src="{{ MEDIA_URL }}rob-hayman-OxPtEsYUNAc-unsplash.jpg" alt="camper at night image">
+                <img id="coming-soon-image" src="{{ MEDIA_URL }}rob-hayman-OxPtEsYUNAc-unsplash.jpg" alt="camper at night image">
             </div>
         </div>
     </div>
