--- a/profiles/templates/profiles/my_listings.html
+++ b/profiles/templates/profiles/my_listings.html
@@ -46,13 +46,13 @@
                     </div>
                     <div class="card-footer card-footer-profile-listing text-center">
                         <a href="{% url 'conversion_detail' listing.id %}">
-                            <button class="btn btn-white btn-outline-black border-white text-white">Go To Listing</button>
+                            <button class="btn border-dark mt-1 btn-outline-black border-white text-white">Go To Listing</button>
                         </a>
                         <a href="{% url 'edit_conversion' listing.id %}">
-                            <button class="btn btn-white btn-outline-black border-white text-white">Edit Listing</button>
+                            <button class="btn border-dark mt-1 btn-outline-black border-white text-white">Edit Listing</button>
                         </a>
                         <a href="{% url 'delete_conversion' listing.id %}">
-                            <button class="btn border-white btn-outline-black text-white">Delete Listing</button>
+                            <button class="btn border-dark mt-1 btn-outline-black text-white">Delete Listing</button>
                         </a>
                         <hr class="border-muted">
                         {% if listing.is_active %}
@@ -60,7 +60,7 @@
                         {% else %}
                         <p class="text-warning mt-3 mb-2">Listing is NOT currently live on the site</p>
                         <a href="{% url 'listing_levels' %}">
-                            <button class="btn border-white btn-outline-black text-white mt-2">View Listing Pricing</button>
+                            <button class="btn border-dark btn-outline-black text-white mt-2">View Listing Pricing</button>
                         </a>
                         {% endif %}
                     </div>
