--- a/static/css/base.css
+++ b/static/css/base.css
@@ -298,6 +298,10 @@ a {
     border: 1px solid rgba(255,255,255,.5);
 }
 
+.border-dark {
+    border: 1px solid #607072;
+}
+
 /* Navbar */
 
 #nav-bars {
