base.css refactor buttons and font-sizes throughout site

--- a/bag/templates/bag/quantity-form.html
+++ b/bag/templates/bag/quantity-form.html
@@ -56,6 +56,6 @@
     </div>
     {% endif %}
 </form>
-<a class="update-link bg-dark p-2 border-muted br-1 text-white"><small>Update</small></a>
-<a class="remove-item bg-dark p-2 border-muted br-1 text-white float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
+<a class="update-link bg-dark p-1 border-muted br-1 text-white float-left"><small>Update</small></a>
+<a class="remove-item bg-dark p-1 border-muted br-1 text-white float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
     
