--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1010,4 +1010,42 @@ https://www.freecodecamp.org/news/how-to-create-an-image-gallery-with-css-grid-e
     body {
         height: calc(100vh - 116px);
     }
+
+    .nav-link {
+        padding: 0.15rem;
+    }
+
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
+    }
+
+    #delivery-banner h4 {
+        font-size: .9rem;
+    }
+
+    .btn.btn-outline-black.border-muted.rounded-2.mt-5,
+    .btn.btn-light-green.btn-outline-muted.rounded-2.text-uppercase.mt-5 {
+        padding: .375rem .375rem;
+    }
+
+   .btn.btn-outline-black.rounded-2.mt-2.btn-lg,
+   .btn.btn-light-green.mt-2.text-white.rounded-2.btn-lg {
+        padding: .375rem .375rem;
+        font-size: .75rem;
+    }
+
+    .increment-qty, .decrement-qty {
+        padding: .25rem .5rem !important;
+    }
+}
+
+@media (max-width: 568px) {
+    #back-to-approval-button {
+        font-size: 0.8rem;
+    }
 }
