Update base.css font sizes on site entry overlay

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -29,9 +29,9 @@
     <div class="row h-100">
         <div id="title-column" class="col">
             <h1 id="home-title" class="display-4 logo-font text-center scratched-font">
-                WILD MILE CONVERSIONS
+                WILD MILE <br class="responsive">CONVERSIONS
             </h1>
-            <h3 id="home-title-caption" class="text-center">A platform to buy and sell unique converted vehicles</h3>
+            <h3 id="home-title-caption" class="text-center">A platform to buy and sell unique <br class="responsive">converted vehicles</h3>
             <div class="my-5">
                 <h4 class="text-center">
                     <a href="{% url 'conversions' %}" id="home-title-button" class="see-conversions-button btn btn-lg rounded-2 text-uppercase text-white bg-light-green border-muted">See Conversions</a></h4>
