--- a/conversions/templates/conversions/conversion_detail.html
+++ b/conversions/templates/conversions/conversion_detail.html
@@ -15,7 +15,7 @@
 
         <div class="row mt-3">
             <div class="col offset-xl-2 mt-5 mb-4">
-                <a class="text-white" href="{% url 'conversions' %}">
+                <a class="text-white larger-font" href="{% url 'conversions' %}">
                     <span><i class="fas fa-chevron-left text-white"></i> BACK TO CONVERSIONS</span>
                 </a>
             </div>
@@ -368,6 +368,11 @@
         {% endif %}
 
     </div>
+    <div class="btt-button shadow-sm rounded-0 border border-white">
+        <a class="btt-link d-flex h-100">
+            <i class="fas fa-arrow-up text-white mx-auto my-auto"></i>
+        </a>	
+    </div>
 {% endblock %}
 
 {% block postloadjs %}
@@ -389,6 +394,9 @@
             }
         }
         })
+		$('.btt-link').click(function(e) {
+			window.scrollTo(0,0)
+		})
     });
 </script>
 {{ block.super }}
