--- a/conversions/templates/conversions/conversions.html
+++ b/conversions/templates/conversions/conversions.html
@@ -106,7 +106,7 @@
                                             <h4 class="mb-2 p-2 text-left font-weight-bold">£{{ conversion.price }}</h4>
                                         </a>
                                     </div>
-                                    <div class="card-body h-100 text-white conversion-detail-border">
+                                    <div class="card-body px-0 h-100 text-white conversion-detail-border">
                                         <div class="row">
                                             <div class="col-6">
                                                 <p class="mt-1 mb-0 p-2 text-left font-weight-bold"><span class="large-font">Vehicle</span> - {{ conversion.vehicle_make_and_model }} - {{ conversion.year }}</p>
@@ -120,7 +120,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="card-footer no-border bg-none text-left">
+                                    <div class="card-footer px-0 no-border bg-none text-left">
                                         <a href="{% url 'conversion_detail' conversion.id %}" class="btn btn-outline-black border-white rounded-2 mb-2 ml-2">View Details</a>
                                         <a href="{% url 'save_listing' conversion.id conversion.unique_ref %}?from_conversions=True" class="ml-2 btn btn-outline-black border-white rounded-2 mb-2">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
                                         <p class="mt-3 text-white large-font contact-info-row d-none">{{ conversion.name }} - {{ conversion.phone_number }}</p>
