--- a/static/css/base.css
+++ b/static/css/base.css
@@ -260,7 +260,7 @@ hr {
 
 @media(max-width:1200px){
     #entry-overlay-logo {
-    width: 35%;
+    width: 40%;
     }
 
     #entry-overlay-content {
@@ -271,6 +271,10 @@ hr {
 @media(max-width:768px){
     #entry-overlay-content h3 {
         font-size: 1.2rem;
+    }
+
+    #entry-overlay-logo {
+    width: 50%;
     }
 }
 
