--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -27,11 +27,11 @@
             <p class="my-0">My Account</p>
         </div>
     </a>
-    <div class="dropdown-menu border-0" aria-labelledby="user-options">
+    <div id="accountdropdown" class="dropdown-menu border-0" aria-labelledby="user-options">
         {% if request.user.is_authenticated %}
             {% if request.user.is_superuser %}
                 <a href="{% url 'approve_conversions' %}" class="dropdown-item">Product Management</a>
-                <a href="{% url 'manage_conversions' %}" class="dropdown-item">Conversion Listing Management</a>
+                <a href="{% url 'manage_conversions' %}" class="dropdown-item">Listing Management</a>
             {% endif %}
             <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
             <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
