--- a/profiles/templates/profiles/my_listings.html
+++ b/profiles/templates/profiles/my_listings.html
@@ -32,7 +32,7 @@
                     <div class="card-body">
                         <h2 class="mt-3 text-white text-center">{{ listing.listing_title }}</h2>
                         <p class="text-white larger-font text-center">£{{ listing.price }}</p>
-                        <div class="p-2 image-container d-flex justify-content-center my-5">
+                        <div class="p-0 image-container d-flex justify-content-center mt-3">
                             {% if listing.main_image %}
                                 <a class="profile-listing-image-link" href="{{ listing.main_image.url }}" target="_blank">
                                     <img class="profile-listing-image img-fluid" src="{{ listing.main_image.url }}" alt="{{ listing.name }}">
@@ -57,11 +57,13 @@
                         <hr class="border-muted">
                         {% if listing.is_active %}
                         <p class="text-success mt-3 mb-0">Listing is currently live on the site</p>
+                        <hr class="border-muted">
                         {% else %}
                         <p class="text-warning mt-3 mb-2">Listing is NOT currently live on the site</p>
                         <a href="{% url 'listing_levels' %}">
                             <button class="btn border-dark btn-outline-black text-white mt-2">View Listing Pricing</button>
                         </a>
+                        <hr class="border-muted">
                         {% endif %}
                     </div>
                 </div>
